<resources>
    <string name="app_name">HelaClockPro</string>
    <string name="btntext">ආරම්භ කරන්න</string>
    <string name="theme">මුහුණුවර ‍තෝරන්න</string>
    <string name="maintext">සිංහල ඔරලෝසුව</string>
    <string name="widhed">Widget Settings</string>
    <string name="textColour">Change Text Colour</string>
    <string name="sinhala">fonts/emanee.ttf</string>
    <string name="bakcolou">Backgrund Colour</string>
    <string name="Hint">Hint ON</string>
    <string name="resetstn">Reset Setting</string>
    <string name="hint_image">Hint Image</string>
    <string name="test">test</string>
    <string name="background_image">Background Image</string>
    <string name="desk_clock_btn">Desk Clock</string>
    <string name="widget_setting_btn">Widget Setting</string>
    <string name="checkbox_blank">Blank</string>
    <string name="checkbox_bg1">Pattern</string>
    <string name="checkbox_grunge">Grunge</string>
    <string name="checkbox_rock">Rock Wall</string>
    <string name="blank_image">Blank Image</string>
    <string name="pattern_image">Pattern Image</string>
    <string name="rock_image">Rock Image</string>
    <string name="grunge_image">Grunge Image</string>
    <string name="clock_setting_title">CLOCK BACKGROUND</string>
    <string name="save">Save</string>
    <string name="english_font">fonts/OpenSans-Regular.ttf</string>
    <string name="english_font_med">fonts/OpenSans-Medium.ttf</string>
    <string name="english_font_sb">fonts/OpenSans-SemiBold.ttf</string>
    <string name="version">HELACLOCK PRO v3.1.2 [FORK]</string>
    <string name="version_welcome">v3.1.2</string>
    <string name="hint">#FFFFFF</string>
    <string name="pick">Pick</string>
    <string name="turn_off_hint">Turn off Hint</string>
    <string name="turn_on_hint">Turn on Hint</string>
</resources>
