<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ahmadrosid.com.lib.CustomTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/widhed"
        android:textColor="@color/white"
        android:textSize="@dimen/_23sdp"
        android:textStyle="bold"
        app:fontPath="@string/english_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="@dimen/_10sdp"
        android:gravity="center"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textcolour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/button"
                android:paddingStart="@dimen/_24sdp"
                android:paddingEnd="@dimen/_24sdp"
                android:text="@string/textColour"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/reset"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/button"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            android:text="@string/resetstn"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/clnoty"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/button"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            android:text="Hide notofication"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

    </LinearLayout>


    <ImageView
        android:id="@+id/ivClockBG"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/sndbackgrund"
        android:contentDescription="@string/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/backcolourimag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ivClockBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivClockBG" />

    <ImageView
        android:id="@+id/hintImage"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivClockBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivClockBG" />

    <ahmadrosid.com.lib.CustomTextView
        android:id="@+id/textAM_PM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_23sdp"
        app:fontPath="@string/sinhala"
        app:layout_constraintStart_toStartOf="@+id/backcolourimag"
        app:layout_constraintTop_toTopOf="@+id/backcolourimag" />

    <ahmadrosid.com.lib.CustomTextView
        android:id="@+id/textHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_45sdp"
        app:fontPath="@string/sinhala"
        app:layout_constraintStart_toStartOf="@+id/textAM_PM"
        app:layout_constraintTop_toTopOf="@+id/textAM_PM" />

    <ahmadrosid.com.lib.CustomTextView
        android:id="@+id/textMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="253dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:fontPath="@string/sinhala"
        app:layout_constraintStart_toStartOf="@+id/textAM_PM"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>